# cloud-deployment

./: Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: main.yml
static/: main.css
templates/: index.html
